<resources>
    <string name="app_name">AEQ Transformation</string>

    <string name="transformers_list_empty">Add Transformers for the battle.</string>

    <string name="transformer_name">Name</string>
    <string name="transformer_team">Team</string>
    <string name="transformer_strength">Strength</string>
    <string name="transformer_intelligence">Intelligence</string>
    <string name="transformer_speed">Speed</string>
    <string name="transformer_endurance">Endurance</string>
    <string name="transformer_rank">Rank</string>
    <string name="transformer_courage">Courage</string>
    <string name="transformer_firepower">Firepower</string>
    <string name="transformer_skill">Skill</string>

    <string name="transformer_add">Add A Transformer</string>
    <string name="transformer_add_button">Add</string>
    <string name="transformer_add_close">Close</string>
    <string name="transformer_add_error_no_name">Please provide the transformer name</string>
    <string name="transformer_add_success">%s was added to the list</string>
    <string name="transformer_criteria_min">0</string>
    <string name="transformer_icon">Transformers Icon</string>
    <string name="transformer_remove">Remove Transformer</string>

    <string name="transformer_team_autobots">Autobots</string>
    <string name="transformer_team_decepticons">Decepticons</string>

    <string name="battle_start">Start Battle</string>
    <string name="battle_no_opponents">There must be at least one Transformer from Autobots and one Transformer from Decepticons</string>
    <string name="battle_immediate_end">All transformers were destroyed</string>

    <plurals name="battle_number">
        <item quantity="one">%d battle</item>
        <item quantity="other">%d battles</item>
    </plurals>

    <string name="battle_winners_autobots">Winning team (Autobots): %s</string>
    <string name="battle_winners_decepticons">Winning team (Decepticons): %s</string>
    <string name="battle_loser_autobots_survivors">Survivors from the losing team (Autobots): %s </string>
    <string name="battle_loser_autobots_no_survivors">Survivors from the losing team (Autobots): None </string>
    <string name="battle_loser_decepticon_survivors">Survivors from the losing team (Decepticons): %s </string>
    <string name="battle_loser_decepticon_no_survivors">Survivors from the losing team (Decepticons): None </string>
    <string name="battle_tie">The battle ended in a tie</string>
    <string name="battle_message_ok">Okay</string>
</resources>
