<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/transformer_name_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/transformer_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primary_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/transformer_name_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/transformer_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/transformer_name_label"
        app:layout_constraintStart_toStartOf="@+id/transformer_name_label"
        app:layout_constraintTop_toBottomOf="@+id/transformer_name_label" />

    <TextView
        android:id="@+id/transformer_team_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/transformer_team"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primary_text"
        app:layout_constraintEnd_toEndOf="@+id/transformer_name_text"
        app:layout_constraintStart_toStartOf="@+id/transformer_name_text"
        app:layout_constraintTop_toBottomOf="@+id/transformer_name_text" />

    <Spinner
        android:id="@+id/transformer_team_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/transformer_teams"
        android:prompt="@string/transformer_team"
        app:layout_constraintEnd_toEndOf="@+id/transformer_team_label"
        app:layout_constraintStart_toStartOf="@+id/transformer_team_label"
        app:layout_constraintTop_toBottomOf="@+id/transformer_team_label" />

    <TextView
        android:id="@+id/transformer_strength_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/transformer_strength"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primary_text"
        app:layout_constraintEnd_toEndOf="@+id/transformer_team_spinner"
        app:layout_constraintStart_toStartOf="@+id/transformer_team_spinner"
        app:layout_constraintTop_toBottomOf="@+id/transformer_team_spinner" />

    <SeekBar
        android:id="@+id/transformer_strength_seekbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:max="10"
        app:layout_constraintBottom_toBottomOf="@+id/transformer_strength_text"
        app:layout_constraintEnd_toStartOf="@+id/transformer_strength_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transformer_strength_label" />

    <TextView
        android:id="@+id/transformer_strength_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transformer_criteria_min"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primary_text"
        app:layout_constraintEnd_toEndOf="@+id/transformer_strength_label"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transformer_strength_label"
        tools:text="10" />

    <TextView
        android:id="@+id/transformer_intelligence_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/transformer_intelligence"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primary_text"
        app:layout_constraintEnd_toEndOf="@+id/transformer_strength_label"
        app:layout_constraintStart_toStartOf="@+id/transformer_strength_label"
        app:layout_constraintTop_toBottomOf="@+id/transformer_strength_text" />

    <SeekBar
        android:id="@+id/transformer_intelligence_seekbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:max="10"
        app:layout_constraintBottom_toBottomOf="@+id/transformer_intelligence_text"
        app:layout_constraintEnd_toStartOf="@+id/transformer_intelligence_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transformer_intelligence_label" />

    <TextView
        android:id="@+id/transformer_intelligence_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transformer_criteria_min"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primary_text"
        app:layout_constraintEnd_toEndOf="@+id/transformer_intelligence_label"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transformer_intelligence_label"
        tools:text="10" />

    <TextView
        android:id="@+id/transformer_speed_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/transformer_speed"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primary_text"
        app:layout_constraintEnd_toEndOf="@+id/transformer_intelligence_label"
        app:layout_constraintStart_toStartOf="@+id/transformer_intelligence_label"
        app:layout_constraintTop_toBottomOf="@+id/transformer_intelligence_text" />

    <SeekBar
        android:id="@+id/transformer_speed_seekbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:max="10"
        app:layout_constraintBottom_toBottomOf="@+id/transformer_speed_text"
        app:layout_constraintEnd_toStartOf="@+id/transformer_speed_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transformer_speed_label" />

    <TextView
        android:id="@+id/transformer_speed_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transformer_criteria_min"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primary_text"
        app:layout_constraintEnd_toEndOf="@+id/transformer_speed_label"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transformer_speed_label"
        tools:text="10" />

    <TextView
        android:id="@+id/transformer_endurance_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/transformer_endurance"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primary_text"
        app:layout_constraintEnd_toEndOf="@+id/transformer_speed_label"
        app:layout_constraintStart_toStartOf="@+id/transformer_speed_label"
        app:layout_constraintTop_toBottomOf="@+id/transformer_speed_text" />

    <SeekBar
        android:id="@+id/transformer_endurance_seekbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:max="10"
        app:layout_constraintBottom_toBottomOf="@+id/transformer_endurance_text"
        app:layout_constraintEnd_toStartOf="@+id/transformer_endurance_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transformer_endurance_label" />

    <TextView
        android:id="@+id/transformer_endurance_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transformer_criteria_min"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primary_text"
        app:layout_constraintEnd_toEndOf="@+id/transformer_endurance_label"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transformer_endurance_label"
        tools:text="10" />

    <TextView
        android:id="@+id/transformer_rank_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/transformer_rank"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primary_text"
        app:layout_constraintEnd_toEndOf="@+id/transformer_endurance_label"
        app:layout_constraintStart_toStartOf="@+id/transformer_endurance_label"
        app:layout_constraintTop_toBottomOf="@+id/transformer_endurance_text" />

    <SeekBar
        android:id="@+id/transformer_rank_seekbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:max="10"
        app:layout_constraintBottom_toBottomOf="@+id/transformer_rank_text"
        app:layout_constraintEnd_toStartOf="@+id/transformer_rank_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transformer_rank_label" />

    <TextView
        android:id="@+id/transformer_rank_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transformer_criteria_min"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primary_text"
        app:layout_constraintEnd_toEndOf="@+id/transformer_rank_label"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transformer_rank_label"
        tools:text="10" />

    <TextView
        android:id="@+id/transformer_courage_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/transformer_courage"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primary_text"
        app:layout_constraintEnd_toEndOf="@+id/transformer_rank_label"
        app:layout_constraintStart_toStartOf="@+id/transformer_rank_label"
        app:layout_constraintTop_toBottomOf="@+id/transformer_rank_text" />

    <SeekBar
        android:id="@+id/transformer_courage_seekbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:max="10"
        app:layout_constraintBottom_toBottomOf="@+id/transformer_courage_text"
        app:layout_constraintEnd_toStartOf="@+id/transformer_courage_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transformer_courage_label" />

    <TextView
        android:id="@+id/transformer_courage_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transformer_criteria_min"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primary_text"
        app:layout_constraintEnd_toEndOf="@+id/transformer_courage_label"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transformer_courage_label"
        tools:text="10" />

    <TextView
        android:id="@+id/transformer_firepower_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/transformer_firepower"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primary_text"
        app:layout_constraintEnd_toEndOf="@+id/transformer_courage_label"
        app:layout_constraintStart_toStartOf="@+id/transformer_courage_label"
        app:layout_constraintTop_toBottomOf="@+id/transformer_courage_text" />

    <SeekBar
        android:id="@+id/transformer_firepower_seekbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:max="10"
        app:layout_constraintBottom_toBottomOf="@+id/transformer_firepower_text"
        app:layout_constraintEnd_toStartOf="@+id/transformer_firepower_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transformer_firepower_label" />

    <TextView
        android:id="@+id/transformer_firepower_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transformer_criteria_min"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primary_text"
        app:layout_constraintEnd_toEndOf="@+id/transformer_firepower_label"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transformer_firepower_label"
        tools:text="10" />

    <TextView
        android:id="@+id/transformer_skill_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/transformer_skill"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primary_text"
        app:layout_constraintEnd_toEndOf="@+id/transformer_firepower_label"
        app:layout_constraintStart_toStartOf="@+id/transformer_firepower_label"
        app:layout_constraintTop_toBottomOf="@+id/transformer_firepower_text" />

    <SeekBar
        android:id="@+id/transformer_skill_seekbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:max="10"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_constraintBottom_toBottomOf="@+id/transformer_skill_text"
        app:layout_constraintEnd_toStartOf="@+id/transformer_skill_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transformer_skill_label" />

    <TextView
        android:id="@+id/transformer_skill_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:text="@string/transformer_criteria_min"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primary_text"
        app:layout_constraintEnd_toEndOf="@+id/transformer_skill_label"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transformer_skill_label"
        tools:text="10" />
</android.support.constraint.ConstraintLayout>
